crates/tui/tests/snapshots/tui_e2e__partial_install.snap
---
source: crates/tui/tests/tui_e2e.rs
assertion_line: 835
expression: output
---
"┌ mac-app-init ────────┐┌ 도메인 현황 — 2/5 설치됨 ────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(27, " "), (29, " "), (31, " "), (34, " "), (36, " "), (45, " "), (47, " "), (49, " ")]
"│ 인입                 ││ ✓ 사용      mount         마운트 2개                                     │" Hidden by multi-width symbols: [(3, " "), (5, " "), (29, " "), (31, " "), (53, " "), (55, " "), (57, " "), (61, " ")]
"│   📋 도메인 현황     ││ ✓ 설치됨     env           확인 중…                                      │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (15, " "), (17, " "), (29, " "), (31, " "), (33, " "), (54, " "), (56, " "), (59, " ")]
"│ 인프라               ││   미설치     cron                                                        │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (29, " "), (31, " "), (33, " ")]
"│   💾 마운트          ││   미설치     git                                                         │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (29, " "), (31, " "), (33, " ")]
"│   🔑 서비스 카드     ││   미설치     keyboard                                                    │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (15, " "), (17, " "), (29, " "), (31, " "), (33, " ")]
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      │└──────────────────────────────────────────────────────────────────────────┘"
"│                      │┌ 설치 / 상태 ─────────────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(27, " "), (29, " "), (34, " "), (36, " ")]
"│                      ││Enter/Space: 설치 또는 제거                                               │" Hidden by multi-width symbols: [(39, " "), (41, " "), (44, " "), (46, " "), (49, " "), (51, " ")]
"│                      ││r: 새로고침                                                               │" Hidden by multi-width symbols: [(29, " "), (31, " "), (33, " "), (35, " ")]
"│                      ││                                                                          │"
"│                      ││카드: enabled 0 / disabled 0                                              │" Hidden by multi-width symbols: [(26, " "), (28, " ")]
"│                      ││카드 없음                                                                 │" Hidden by multi-width symbols: [(26, " "), (28, " "), (31, " "), (33, " ")]
"│                      ││                                                                          │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"↑↓ 항목 │ Enter 실행 │ e 수정 │ Tab 섹션 │ ←/Esc 뒤로                                               " Hidden by multi-width symbols: [(4, " "), (6, " "), (17, " "), (19, " "), (26, " "), (28, " "), (37, " "), (39, " "), (50, " "), (52, " ")]
