crates/tui/tests/snapshots/tui_e2e__section_menu_third.snap
---
source: crates/tui-v2/tests/tui_e2e.rs
expression: output
---
"┌ mac-app-init ────────┐┌ 서비스 카드 ─────┐┌ 안내 ────────────────────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(27, " "), (29, " "), (31, " "), (34, " "), (36, " "), (47, " "), (49, " ")]
"│ 인입                 ││ Cards            ││j/k 로 카드 선택. R/N/S/B 로 선택 카드의 mount 옵션 토글. d 로 삭제.      │" Hidden by multi-width symbols: [(3, " "), (5, " "), (50, " "), (53, " "), (55, " "), (58, " "), (60, " "), (72, " "), (75, " "), (77, " "), (80, " "), (82, " "), (84, " "), (93, " "), (95, " "), (98, " "), (100, " "), (106, " "), (109, " "), (111, " ")]
"│   📋 도메인 현황     ││ Actions          ││                                                                          │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (15, " "), (17, " ")]
"│ 인프라               ││ 안내             ││                                                                          │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (27, " "), (29, " ")]
"│   🔑 서비스 카드     ││                  ││                                                                          │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (15, " "), (17, " ")]
"│                      ││                  ││                                                                          │"
"│                      ││                  ││                                                                          │"
"│                      ││                  ││                                                                          │"
"│                      ││                  ││                                                                          │"
"│                      ││                  ││                                                                          │"
"│                      ││                  ││                                                                          │"
"│                      ││                  ││                                                                          │"
"│                      ││                  │└──────────────────────────────────────────────────────────────────────────┘"
"│                      ││                  │┌──────────────────────────────────────────────────────────────────────────┐"
"│                      ││                  ││  mac run env --help                                                      │"
"│                      ││                  ││                                                                          │"
"│                      ││                  ││                                                                          │"
"│                      ││                  ││                                                                          │"
"└──────────────────────┘└──────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"↑↓ 섹션 │ Enter/→ 콘텐츠 │ ←/Esc 뒤로 │ r 새로고침                                                                      " Hidden by multi-width symbols: [(4, " "), (6, " "), (19, " "), (21, " "), (23, " "), (34, " "), (36, " "), (43, " "), (45, " "), (47, " "), (49, " ")]
