crates/tui/tests/snapshots/tui_e2e__section_tab_switch.snap
---
source: crates/tui-v2/tests/tui_e2e.rs
expression: output
---
"┌ mac-app-init ────────┐┌ 의존성 설치 ─────┐┌ Actions ─────────────────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(27, " "), (29, " "), (31, " "), (34, " "), (36, " ")]
"│ 인입                 ││ Status           ││ ▶ Status  [s]                                                            │" Hidden by multi-width symbols: [(3, " "), (5, " ")]
"│   📋 도메인 현황     ││ Actions          ││   List  [l]                                                              │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (15, " "), (17, " ")]
"│   🚀 의존성 설치     ││                  ││                                                                          │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (15, " "), (17, " ")]
"│ 인프라               ││                  ││                                                                          │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " ")]
"│   💾 마운트          ││                  ││                                                                          │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " ")]
"│   🔑 서비스 카드     ││                  ││                                                                          │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (15, " "), (17, " ")]
"│   🖥 시스템 상태      ││                  ││                                                                          │" Hidden by multi-width symbols: [(7, " "), (9, " "), (11, " "), (14, " "), (16, " ")]
"│ 자동화               ││                  ││                                                                          │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " ")]
"│   ⏰ 크론(스케줄)    ││                  ││                                                                          │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (13, " "), (15, " "), (17, " ")]
"│   📁 파일정리        ││                  ││                                                                          │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (14, " ")]
"│   📸 SD 미디어 백업  ││                  ││                                                                          │" Hidden by multi-width symbols: [(5, " "), (11, " "), (13, " "), (15, " "), (18, " "), (20, " ")]
"│ 개발                 ││                  ││                                                                          │" Hidden by multi-width symbols: [(3, " "), (5, " ")]
"│   🔱 Git 설정        ││                  ││                                                                          │" Hidden by multi-width symbols: [(5, " "), (12, " "), (14, " ")]
"│   💻 VSCode          ││                  ││                                                                          │" Hidden by multi-width symbols: [(5, " ")]
"│   📦 컨테이너        ││                  ││                                                                          │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (14, " ")]
"│ Finder               ││                  ││                                                                          │"
"│   ⚡ 빠른동작        ││                  ││                                                                          │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (14, " ")]
"│ 시스템               ││                  ││                                                                          │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " ")]
"│   ⌨ 키보드 재매핑    ││                  ││                                                                          │" Hidden by multi-width symbols: [(7, " "), (9, " "), (11, " "), (14, " "), (16, " "), (18, " ")]
"│   🐚 PATH+Alias      ││                  ││                                                                          │" Hidden by multi-width symbols: [(5, " ")]
"│   🔒 VPN             ││                  ││                                                                          │" Hidden by multi-width symbols: [(5, " ")]
"│                      ││                  │└──────────────────────────────────────────────────────────────────────────┘"
"│                      ││                  │┌──────────────────────────────────────────────────────────────────────────┐"
"│                      ││                  ││  mac run bootstrap --help                                                │"
"│                      ││                  ││                                                                          │"
"│                      ││                  ││                                                                          │"
"│                      ││                  ││                                                                          │"
"└──────────────────────┘└──────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"↑↓ 섹션 │ Enter/→ 콘텐츠 │ ←/Esc 뒤로 │ r 새로고침                                                                      " Hidden by multi-width symbols: [(4, " "), (6, " "), (19, " "), (21, " "), (23, " "), (34, " "), (36, " "), (43, " "), (45, " "), (47, " "), (49, " ")]
