crates/tui/tests/snapshots/tui_e2e__spinner_loading.snap
---
source: crates/tui/tests/tui_e2e.rs
expression: output
---
"┌ mac-app-init ────────┐┌ mount ───────────────────────────────────────────────────────────────────┐"
"│ 인입                 ││                                                                          │" Hidden by multi-width symbols: [(3, " "), (5, " ")]
"│   📋 도메인 현황     ││                                                                          │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (15, " "), (17, " ")]
"│   🚀 의존성 설치     ││  ⠋ 로딩 중...                                                            │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (15, " "), (17, " "), (30, " "), (32, " "), (35, " ")]
"│ 인프라               ││                                                                          │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " ")]
"│   💾 마운트          ││  mount 도메인 정보를 가져오고 있습니다.                                  │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (34, " "), (36, " "), (38, " "), (41, " "), (43, " "), (45, " "), (48, " "), (50, " "), (52, " "), (54, " "), (57, " "), (59, " "), (61, " "), (63, " ")]
"│   🔑 서비스 카드     ││                                                                          │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (15, " "), (17, " ")]
"│   🖥 시스템 상태      ││                                                                          │" Hidden by multi-width symbols: [(7, " "), (9, " "), (11, " "), (14, " "), (16, " ")]
"│ 자동화               ││                                                                          │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " ")]
"│   ⏰ 크론(스케줄)    ││                                                                          │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (13, " "), (15, " "), (17, " ")]
"│   📁 파일정리        ││                                                                          │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (14, " ")]
"│   📸 SD 미디어 백업  ││                                                                          │" Hidden by multi-width symbols: [(5, " "), (11, " "), (13, " "), (15, " "), (18, " "), (20, " ")]
"│ 개발                 ││                                                                          │" Hidden by multi-width symbols: [(3, " "), (5, " ")]
"│   🔱 Git 설정        ││                                                                          │" Hidden by multi-width symbols: [(5, " "), (12, " "), (14, " ")]
"│   💻 VSCode          ││                                                                          │" Hidden by multi-width symbols: [(5, " ")]
"│   📦 컨테이너        ││                                                                          │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (14, " ")]
"│ Finder               ││                                                                          │"
"│   ⚡ 빠른동작        ││                                                                          │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (14, " ")]
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"↑↓ 항목 │ e 수정 │ Tab 섹션 │ ←/Esc 뒤로 │ Enter 실행                                               " Hidden by multi-width symbols: [(4, " "), (6, " "), (13, " "), (15, " "), (24, " "), (26, " "), (37, " "), (39, " "), (50, " "), (52, " ")]
